configure a proxypass to the influxdb linked container

--- a/nginx.config
+++ b/nginx.config
@@ -16,4 +16,8 @@ server {
         auth_basic_user_file /data/.htpasswd;
         try_files $uri $uri/ =404;
     }
+
+    location /db {
+	    proxy_pass          http://influxdb:8086/db;
+    }
 }
